src/app/modules/elements/card/Card.component.css
.container
{
    display: flex;
    justify-content: center;
    flex-direction: row;
    float: left;
    padding: 0;
}

.card
{
    width: 250px;
    background: white;
    border-radius: 15px;
    transition: 0.2s;
}

.imgBox img
{
    border-radius: 15px 15px 0 0;
    width: 100%;
}

.card:hover {
    box-shadow: 0 0 10px rgba(0,0,0,0.5);
    transition: 0.2s;
}

.productInfo
{
    color: black;
    padding-left: 10px;
    padding-right: 10px;
    display: -webkit-box;
    text-overflow: ellipsis;
    overflow: hidden;
    font-weight: 400;
    margin-top: 10px;
}

.productInfo a {
    color: black;
    text-decoration: none;
}

.userProfileInfo
{
    padding-left: 5px;
    opacity: 0.9;
    margin-top: 25px;
    margin-bottom: 20px
}

.userProfileIcon img
{
    border-radius: 50%;
    width: 30px;
    height: 30px;
    float:left;
    padding-left: 10px;
    padding-right: 5px;

}
.userUserName
{
    font-size: small;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space:nowrap;
}

.userUserName a {
    color: black;

  }

